[gd_scene load_steps=5 format=3 uid="uid://dwk5ktuot37aa"]

[ext_resource type="Script" path="res://Scenes/Scripts/settings.gd" id="1_3m4xg"]
[ext_resource type="PackedScene" uid="uid://b5f4bk8be8ysc" path="res://Scenes/bindings.tscn" id="2_f76in"]
[ext_resource type="Theme" uid="uid://cedwkvggr4pcc" path="res://Themes/MenuButton.tres" id="3_oriae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xh8e3"]

[node name="Settings" type="Node2D"]
z_index = 10
script = ExtResource("1_3m4xg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2148.0
offset_bottom = 1212.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Button" parent="."]
offset_left = -73.0
offset_top = -41.0
offset_right = 1970.0
offset_bottom = 1126.0
flat = true

[node name="Title" type="Label" parent="."]
offset_right = 1921.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 100
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(502, 140)

[node name="infiniteLives" type="Label" parent="Node2D"]
offset_top = 242.0
offset_right = 308.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 50
text = "Infinite Lives"

[node name="ColorRect" type="ColorRect" parent="Node2D/infiniteLives"]
layout_mode = 0
offset_left = 818.0
offset_top = 6.0
offset_right = 896.0
offset_bottom = 84.0

[node name="InfiniteLives" type="CheckBox" parent="Node2D/infiniteLives"]
layout_mode = 0
offset_left = 797.0
offset_top = -15.0
offset_right = 813.0
offset_bottom = 0.999998
scale = Vector2(5, 5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_xh8e3")
expand_icon = true

[node name="lives" type="Label" parent="Node2D"]
offset_top = 354.0
offset_right = 410.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 50
text = "Number of Lives "

[node name="ColorRect" type="ColorRect" parent="Node2D/lives"]
layout_mode = 0
offset_left = 737.0
offset_top = 4.0
offset_right = 931.0
offset_bottom = 118.0

[node name="Label2" type="Label" parent="Node2D/lives"]
layout_mode = 0
offset_left = 3.0
offset_top = 74.0
offset_right = 699.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 30
text = "(changes take effect at the start of the next run)"

[node name="LineEdit" type="LineEdit" parent="Node2D/lives"]
layout_mode = 0
offset_left = 738.0
offset_top = 5.0
offset_right = 930.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Volume" type="Label" parent="Node2D"]
visible = false
offset_top = 512.0
offset_right = 185.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 50
text = "Volume"

[node name="ColorRect" type="ColorRect" parent="Node2D/Volume"]
layout_mode = 0
offset_left = 241.0
offset_top = 40.0
offset_right = 922.0
offset_bottom = 50.0
color = Color(0.588235, 0.588235, 0.588235, 1)

[node name="HSlider" type="HSlider" parent="Node2D/Volume"]
layout_mode = 0
offset_left = 242.0
offset_top = 37.0
offset_right = 921.0
offset_bottom = 53.0

[node name="Controls" type="Button" parent="."]
offset_left = 688.0
offset_top = 779.0
offset_right = 1293.0
offset_bottom = 913.0
theme = ExtResource("3_oriae")
text = "Controls"

[node name="Bindings" parent="." instance=ExtResource("2_f76in")]
visible = false
position = Vector2(54, 87)

[connection signal="toggled" from="Node2D/infiniteLives/InfiniteLives" to="." method="_on_infinite_lives_toggled"]
[connection signal="focus_exited" from="Node2D/lives/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="Node2D/lives/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="button_down" from="Controls" to="." method="_on_controls_button_down"]
